# a-simple-google-file-system-implementation

./: CMakeLists.txt  README.md
.cache/clangd/index/: ChunkServer.cpp.A871239C34CD30D2.idx  Client.cpp.F7D292339B342564.idx  Master.cpp.4E67616011529966.idx  common.cpp.83708BB5A957B932.idx  main_chunk_server.cpp.69CCB8E8F86629A0.idx  main_client.cpp.0D7354AA99407301.idx  main_master.cpp.16D8A1B959E9BF69.idx
src/master/: file_manager.h  namespace_manager.cc  namespace_manager.h
src/util/: state_code.cc  state_code.h
